tests/fixtures/invalid/str_sub_dict.py
# Cannot subtract Str and Dict[str, int]
x: str = "hello" - {"a": 1}
